--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1765,3 +1765,9 @@ body.is-article-visible #footer {
 body.is-preload #footer {
   opacity: 0;
 }
+
+.profile-icon {
+  width: 100%;
+  height: 100%;
+  border-radius: 100px;
+}
