--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1775,3 +1775,15 @@ body.is-preload #footer {
 #icons-container:before {
   display: none;
 }
+.video.main {
+  display: flex;
+  margin: 2.5rem 0;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+/* .image.main video {
+  width: 100%;
+} */
