updated resume, fixed bug on footer of project cards, increased picture brightness.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -244,7 +244,7 @@ a {
     border-bottom-color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out,
     border-bottom-color 0.2s ease-in-out;
-  border-bottom: dotted 1px rgba(255, 255, 255, 0.5);
+  /* border-bottom: dotted 1px rgba(255, 255, 255, 0.5); */
   text-decoration: none;
   color: inherit;
 }
@@ -1841,6 +1841,7 @@ body.is-preload #footer {
   border-radius: 10px;
   margin: 20px 10px;
   background-color: rgb(61, 60, 60);
+  position: relative;
 }
 .project-card h3 {
   padding: 0 10px 0 10px;
@@ -1849,7 +1850,7 @@ body.is-preload #footer {
   font-size: 0.8rem;
 }
 .project-card img {
-  filter: brightness(60%);
+  filter: brightness(95%);
   transition-duration: 0.4s;
   border-radius: 10px;
 
@@ -1857,7 +1858,7 @@ body.is-preload #footer {
   width: 350px;
 }
 .project-card img:hover {
-  filter: brightness(100%);
+  filter: brightness(105%);
 }
 
 @media (max-width: 1680px) {
@@ -1899,6 +1900,10 @@ body.is-preload #footer {
   margin: 0 10px 0 10px;
 }
 .card-footer {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
